# primebuild-saas

./: .env.example  .eslintrc.cjs  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  Eventra-Admin.cmd  Eventra-Local.cmd  Eventra-Mobile.cmd  README.md  package-lock.json  package.json  railway.json  react-router.config.ts  shopify.app.toml  vitest.config.ts
.github/workflows/: release-eventra-business-admin.yml  release-eventra-desktop.yml  release-eventra-mobile.yml
app/: app.css
app/components/: Placeholder.tsx
app/components/shell/: AppShell.tsx  MobileNav.tsx  NavLinks.tsx  Sidebar.tsx  Topbar.tsx
app/components/ui/: Badge.tsx  Button.tsx  Card.tsx  ConfirmDialog.tsx  Drawer.tsx  EmptyState.tsx  Field.tsx  FormControls.tsx  LinkButton.tsx  Modal.tsx  PageHeader.tsx  SegmentedControl.tsx  StatTile.tsx  StatusPill.tsx  Tabs.tsx  Toggle.tsx  index.ts
app/context/: DataContext.tsx  PlanContext.tsx  StoreContext.tsx
app/data/: index.ts  mockCampaigns.ts  mockCatalog.ts  mockCountries.ts  mockGlobalEvents.ts  mockStore.ts  mockStoreEventPreferences.ts  mockTemplates.ts
app/db/: supabase.server.ts  tenant.server.ts
app/features/admin/: AdminConsole.tsx
app/features/analytics/: BarList.tsx
app/features/billing/: PricingPlans.tsx
app/features/calendar/: DayDetail.tsx  MonthView.tsx
app/features/campaigns/: CampaignCard.tsx  CampaignDetail.tsx  CampaignFilterBar.tsx  CampaignForm.tsx  CampaignFormModal.tsx  CampaignStatusMenu.tsx  ProductPicker.tsx
app/features/countries/: CountryManager.tsx
app/features/dashboard/: DashboardCampaigns.tsx  PreparationNeeded.tsx  QuickActions.tsx
app/features/events/: CustomEventFormModal.tsx  EventCatalog.tsx  eventDisplay.tsx
app/features/settings/: SettingsPanels.tsx
app/lib/: accents.ts  calendar.ts  campaigns.ts  dates.ts  events.ts  format.ts  id.ts  planEntitlements.ts  planLimits.ts
app/routes/: app.$.tsx  app._index.tsx  app.admin.tsx  app.analytics.tsx  app.billing.tsx  app.calendar.tsx  app.campaign-library.tsx  app.campaigns.tsx  app.countries.tsx  app.events.tsx  app.search.tsx  app.settings.tsx  app.templates.tsx  app.tsx
app/types/: domain.ts
apps/admin/: .env.example  index.html  package.json  vite.config.ts
apps/admin/src/: App.tsx  main.tsx
apps/admin/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json  tauri.conf.release.json
apps/admin/src-tauri/capabilities/: default.json
apps/admin/src-tauri/src/: lib.rs  main.rs  updater.rs
apps/admin/test/: engine.test.ts  internal-os-ui.test.tsx  metric-formulas.test.ts  setup.ts  shell.test.tsx  studio.test.tsx
apps/business/: .env.example  package.json  shopify.app.toml  shopify.web.toml  tsconfig.json  vite.config.ts
apps/business-admin/: EVENTRA_BUSINESS_ADMIN_UPDATER_REPORT.md  index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
apps/business-admin/scripts/: check-version-sync.mjs
apps/business-admin/src/: App.tsx  main.tsx
apps/business-admin/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
apps/business-admin/src-tauri/capabilities/: default.json
apps/business-admin/src-tauri/icons/: icon.icns
apps/business-admin/src-tauri/src/: launcher.rs  lib.rs  main.rs  updater.rs
apps/business-admin/test/: business-admin.test.tsx  updates.test.tsx
apps/business-client/: .env.example  package.json  shopify.app.toml
apps/business-client/app/: root.tsx
apps/business-client/public/: manifest.webmanifest
apps/business-client/test/: setup.ts
apps/business/app/: app.css  root.tsx  shopify.server.ts
apps/business/public/: offline.html  sw.js
apps/consumer/: .env.example  EVENTRA_MOBILE_UPDATER_REPORT.md  index.html  package.json
apps/consumer/public/: manifest.webmanifest  offline.html  sw.js
apps/consumer/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json  tauri.conf.release.json
apps/consumer/src-tauri/capabilities/: default.json
apps/consumer/src-tauri/src/: lib.rs  main.rs  updater.rs
docs/: ADMIN_CONFIGURATION.md  ADMIN_CONSOLE.md  ADVERTISING.md  AD_PRIVACY.md  AI_ENGINE.md  ARCHITECTURE.md  ARCHITECTURE_REVIEW.md  AUTOMATIONS.md  BILLING_ARCHITECTURE.md  BUILD_STATUS.md  BUSINESS_INFORMATION_ARCHITECTURE.md  BUSINESS_PLANS.md  BUSINESS_PREINSTALL_UX_REVIEW.md  BUSINESS_PRODUCT.md  BUSINESS_RULES.md  CALENDAR_ENGINE.md  COMMISSIONS.md  COMPANY_MONITORING.md  CONSUMER_PLANS.md  CONSUMER_PRODUCT.md  DATA_MODEL.md  DECISIONS.md  DEPLOY.md  DESIGN_SYSTEM.md  DOC_IMPACT.md  ENTITLEMENTS.md  ENVIRONMENTS.md  EVENTRA_BUSINESS_PRODUCT_REDESIGN_REPORT.md  EVENTRA_DESKTOP_UPDATER.md  EVENTRA_INTERNAL_OS_CORRECTION_AUDIT.md  EVENTRA_INTERNAL_OS_DASHBOARD.md  EVENTRA_INTERNAL_OS_DATA_SOURCES.md  EVENTRA_INTERNAL_OS_DESIGN.md  EVENTRA_INTERNAL_OS_NAVIGATION.md  EVENTRA_PREINSTALL_CERTIFICATION.md  EVENTRA_THREE_APPS_AUDIT.md  FINAL_CERTIFICATION_CHECKLIST.md  FINAL_CERTIFICATION_REPORT.md  GLOBAL_CALENDAR.md  INSTALL.md  (+43 more)
docs/desktop/: EVENTRA_ADMIN_DESKTOP_BUILD.md  EVENTRA_ADMIN_DESKTOP_REPORT.md  EVENTRA_ADMIN_DESKTOP_SECURITY.md  EVENTRA_ADMIN_TAURI_ARCHITECTURE.md  EVENTRA_ADMIN_WINDOWS_INSTALLATION.md  EVENTRA_MOBILE_TAURI.md
scripts/: check-boundaries.mjs  check-pwa.mjs  check-sql-readiness.mjs  eventra-admin.mjs  eventra-local.mjs  eventra-local.ps1  eventra-mobile.mjs  make-pwa-icons.mjs  preinstall-check.mjs  reset-local.mjs  update-local.mjs  verify-file-persistence.mjs
scripts/windows/: install-shortcuts.ps1  make-icon.ps1  uninstall-shortcuts.ps1
services/api/: .env.example  package.json
services/workers/: package.json  tsconfig.json
supabase/: README.md  seed.sql
supabase/migrations/: 0001_schema.sql  0003_reference_data.sql  0004_internal_os.sql  0006_harden_function_search_path.sql
supabase/policies/: 0002_rls.sql  0005_internal_os_rls.sql
supabase/rollback/: 0001_drop.sql
supabase/seeds/: seed.sql
supabase/tests/: README.md  preinstall_rls_matrix.sql
test/components/: CampaignDetail.test.tsx
test/context/: DataContext.test.tsx
test/lib/: campaigns.test.ts  events.test.ts  planEntitlements.test.ts  planning.test.ts  search.test.ts
(+292 files in other folders)
