[package]
name = "eventra-business-admin"
version = "0.1.1"
description = "Eventra Business Admin — private Windows desktop shell for apps/business-admin (internal monitoring console)"
authors = ["Eventra"]
edition = "2021"
rust-version = "1.77.2"

# The library is what Tauri runs; main.rs is a thin launcher. Keeps the crate
# mobile-ready and testable, matching Tauri 2 conventions.
[lib]
name = "eventra_business_admin_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-window-state = "2"
tauri-plugin-log = "2"
# Automatic updates: checks a signed manifest, downloads and installs the new
# signed package natively. Driven from Rust (see src/updater.rs).
tauri-plugin-updater = "2"
# Registers the app's URI scheme (eventra-business-admin://) so it is launchable by
# other Eventra apps, and receives inbound deep links. See src/launcher.rs + src/lib.rs.
tauri-plugin-deep-link = "2"
# Ensures a deep link (or a second launch) focuses the running window instead of
# spawning a duplicate process — no orphan windows.
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"

# Windows-only: per-user registry probe for sibling Eventra URI-scheme handlers.
[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[features]
# Enabled by `tauri build`; disables the dev asset server and embeds the bundle.
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
# Thin LTO across 4 codegen units instead of fat LTO in a single unit. Fat LTO
# builds the whole program as one LLVM module, whose peak memory exceeded what is
# available on the release machine (`rustc-LLVM ERROR: out of memory` while
# linking the final binary). Thin LTO keeps nearly all of the size and speed
# benefit at a fraction of the peak memory, so release builds are reproducible
# here instead of depending on how much RAM happens to be free.
codegen-units = 4
lto = "thin"
opt-level = "s"
strip = true
